--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.13",
-    "@reduxjs/toolkit": "^1.9.1",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "redux": "^4.2.1",
     "sass": "^1.58.3",
     "web-vitals": "^2.1.4"
   },
