--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "sass": "^1.58.3",
+    "socket.io-client": "^4.6.1",
+    "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
