--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "react-webcam": "^7.0.1",
     "redux": "^4.2.1",
     "sass": "^1.58.3",
     "socket.io-client": "^4.6.1",
